# ogr2osm

./: setup.cfg
