[metadata]
name = attr: src.version.__program__
version = attr: src.version.__version__
license = attr: src.version.__license__
author = attr: src.version.__author__
author_email = ogr2osm.pypi@derickx.be
description = A tool for converting ogr-readable files like shapefiles into .osm or .pbf data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roelderickx/ogr2osm
classifiers =
    Environment :: Console
    Topic :: Scientific/Engineering :: GIS
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    lxml>=4.3.0
    GDAL>=3.0.0

[options.entry_points]
console_scripts =
    ogr2osm = ogr2osm.ogr2osm:main

